making progress on ICET3D -- started get_x() portion from 2D code

--- a/v2/ICET3D.ipynb
+++ b/v2/ICET3D.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
     {
      "data": {
       "application/javascript": [
@@ -61,26 +69,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "took 0.19204330444335938 seconds with tensorflow\n",
-      "took 0.16503596305847168 seconds with tensorflow\n",
+      "took 0.6031734943389893 seconds with tensorflow\n",
       "0\n",
-      "took 0.1662909984588623 seconds with tensorflow\n",
-      "1\n",
-      "took 0.17003798484802246 seconds with tensorflow\n",
-      "2\n",
-      "took 0.16645407676696777 seconds with tensorflow\n",
-      "3\n",
-      "took 0.17003846168518066 seconds with tensorflow\n",
-      "4\n"
+      "took 1.0933189392089844 seconds with tensorflow\n",
+      "took 2.846407413482666 seconds total\n"
      ]
     }
    ],
@@ -105,16 +106,28 @@
     "\n",
     "f = tf.constant([100,100,2]) #fidelity in x, y, z # < 5s\n",
     "lim = tf.constant([-100.,100.,-100.,100.,-10.,10.]) #needs to encompass every point\n",
-    "nc = 5\n",
+    "nc = 1\n",
     "mnp = 15\n",
+    "npts = 100000\n",
     "\n",
-    "E = ICET3D(cloud1_tensor[:30000], cloud2_tensor[:30000], plt, bounds = lim, \n",
-    "           fid = f, num_cycles = 5, min_num_pts = mnp)\n",
-    "#NOTE: Out of Memory Error comes from too high fidelity/ pts in cloud tensor -> 100x100x2x120,000 > 2gb\n",
+    "start = time.time()\n",
+    "Q = ICET3D(cloud1_tensor[:npts], cloud2_tensor[:npts], plt, bounds = lim, \n",
+    "           fid = f, num_cycles = nc , min_num_pts = mnp)\n",
+    "#NOTE: Out of Memory Error comes from too high fidelity/ pts in cloud tensor --> 100x100x2x120,000 > 2gb\n",
     "\n",
-    "# print(E)\n",
+    "print(\"took\", time.time() - start, \"seconds total\")\n",
+    "\n",
+    "# print(Q)\n",
+    "# print(np.around(Q.numpy(), 10))\n",
     "# ViewInteractiveWidget(plt2.window)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -533,6 +546,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### compare jacobian() and jacobian_tf()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -558,11 +578,12 @@
     "#TF is slower if we do them one by one BUT is waaay faster if we send them in all at once\n",
     "start = time.time()\n",
     "numiter = 1000\n",
-    "angs = tf.random.normal((3,numiter))\n",
+    "# angs = tf.random.normal((3,numiter))\n",
+    "angs = tf.constant([1.,2.,3.])\n",
     "p_point = tf.random.normal((3,numiter))\n",
-    "J = jacobian_tf(angs, p_point);\n",
+    "J = jacobian_tf(p_point, angs);\n",
     "print(\"took\", time.time()-start, \"seconds on GPU\")\n",
-    "print(J.numpy())"
+    "print(J)"
    ]
   },
   {
