added function to check condition number and do L2 pruning

--- a/v2/ICET3D.ipynb
+++ b/v2/ICET3D.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 89,
    "metadata": {
     "scrolled": false
    },
@@ -70,10 +70,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "took 0.3195836544036865 seconds with tensorflow\n",
+      "took 0.32009410858154297 seconds with tensorflow\n",
       "0\n",
-      "took 0.36159348487854004 seconds with tensorflow\n",
-      "took 0.8582453727722168 seconds total\n"
+      "took 0.3621060848236084 seconds with tensorflow\n",
+      "took 0.889561653137207 seconds total\n"
      ]
     }
    ],
@@ -110,8 +110,27 @@
     "print(\"took\", time.time() - start, \"seconds total\")\n",
     "\n",
     "# print(tf.sqrt(tf.math.abs(Q)))\n",
-    "# print(np.around(Q.numpy(), 10))\n",
+    "# ans = np.sqrt(Q.numpy())\n",
+    "# print(ans[0,0], ans[1,1], ans[2,2])\n",
     "# ViewInteractiveWidget(plt2.window)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([0 1 2 3 4 5], shape=(6,), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ans = tf.cast(tf.linspace(0,5,6), dtype=tf.int32)\n",
+    "print(ans)"
    ]
   },
   {
