fixed bug where ellipses were not rotated correctly when drawn. Added param to draw correpondences in visualization

--- a/v2/ICET3D.ipynb
+++ b/v2/ICET3D.ipynb
@@ -9,9 +9,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.notebook.set_autosave_interval(180000)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Autosaving every 180 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import tensorflow as tf\n",
@@ -44,11 +61,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape tf.Tensor([123397      3], shape=(2,), dtype=int32)\n",
+      "shape tf.Tensor([116307      3], shape=(2,), dtype=int32)\n",
+      "took 0.09102034568786621 seconds with tensorflow\n",
+      "0\n",
+      "took 0.08801960945129395 seconds with tensorflow\n",
+      "\n",
+      " corr \n",
+      " tf.Tensor(\n",
+      "[[ 0  0]\n",
+      " [ 1  1]\n",
+      " [ 2  2]\n",
+      " [ 3  3]\n",
+      " [ 4  4]\n",
+      " [ 6  5]\n",
+      " [ 7  6]\n",
+      " [ 9  8]\n",
+      " [10  9]\n",
+      " [11 10]\n",
+      " [12 12]\n",
+      " [13 13]\n",
+      " [14 14]\n",
+      " [15 15]\n",
+      " [16 16]\n",
+      " [17 20]\n",
+      " [18 21]\n",
+      " [19 22]\n",
+      " [20 23]\n",
+      " [21 24]\n",
+      " [23 28]\n",
+      " [24 29]], shape=(22, 2), dtype=int32)\n",
+      "\n",
+      " HTW \n",
+      " tf.Tensor([22  6  3], shape=(3,), dtype=int32)\n",
+      "\n",
+      " dx \n",
+      " tf.Tensor([-8.632524    1.6539038  -0.10187171 -0.73377335 -0.19740877  0.14415486], shape=(6,), dtype=float32)\n",
+      "took 1.2050893306732178 seconds total\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "85e702de07824b25ae5f912c47c10889",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "ViewInteractiveWidget(height=960, layout=Layout(height='auto', width='100%'), width=960)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ICET3D import ICET3D\n",
     "\n",
@@ -74,8 +149,9 @@
     "mnp = 15\n",
     "npts = 100000\n",
     "D = True #draw sim\n",
-    "DG = True #draw grid\n",
+    "DG = False #draw grid\n",
     "DE = False #draw ellipsoids\n",
+    "DC = True #draw correspondences\n",
     "\n",
     "#just consider small section of image where there are easily identifiable features:\n",
     "#----------------------------------------------------------------------------------\n",
@@ -88,7 +164,8 @@
     "\n",
     "start = time.time()\n",
     "Q, x_hist = ICET3D(cloud1_tensor[:npts], cloud2_tensor[:npts], plt, bounds = lim, \n",
-    "           fid = f, num_cycles = nc , min_num_pts = mnp, draw = D, draw_grid = DG, draw_ell = DE)\n",
+    "                   fid = f, num_cycles = nc , min_num_pts = mnp, draw = D, draw_grid = DG, draw_ell = DE,\n",
+    "                   draw_corr = DC )\n",
     "#NOTE: Out of Memory Error comes from too high fidelity/ pts in cloud tensor --> 100x100x2x120,000 > 2gb\n",
     "\n",
     "print(\"took\", time.time() - start, \"seconds total\")\n",
