--- a/v2/ICET3D.ipynb
+++ b/v2/ICET3D.ipynb
@@ -9,26 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "IPython.notebook.set_autosave_interval(180000)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Autosaving every 180 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import tensorflow as tf\n",
@@ -61,69 +44,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "shape tf.Tensor([123397      3], shape=(2,), dtype=int32)\n",
-      "shape tf.Tensor([116307      3], shape=(2,), dtype=int32)\n",
-      "took 0.09102034568786621 seconds with tensorflow\n",
-      "0\n",
-      "took 0.08801960945129395 seconds with tensorflow\n",
-      "\n",
-      " corr \n",
-      " tf.Tensor(\n",
-      "[[ 0  0]\n",
-      " [ 1  1]\n",
-      " [ 2  2]\n",
-      " [ 3  3]\n",
-      " [ 4  4]\n",
-      " [ 6  5]\n",
-      " [ 7  6]\n",
-      " [ 9  8]\n",
-      " [10  9]\n",
-      " [11 10]\n",
-      " [12 12]\n",
-      " [13 13]\n",
-      " [14 14]\n",
-      " [15 15]\n",
-      " [16 16]\n",
-      " [17 20]\n",
-      " [18 21]\n",
-      " [19 22]\n",
-      " [20 23]\n",
-      " [21 24]\n",
-      " [23 28]\n",
-      " [24 29]], shape=(22, 2), dtype=int32)\n",
-      "\n",
-      " HTW \n",
-      " tf.Tensor([22  6  3], shape=(3,), dtype=int32)\n",
-      "\n",
-      " dx \n",
-      " tf.Tensor([-8.632524    1.6539038  -0.10187171 -0.73377335 -0.19740877  0.14415486], shape=(6,), dtype=float32)\n",
-      "took 1.2050893306732178 seconds total\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85e702de07824b25ae5f912c47c10889",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "ViewInteractiveWidget(height=960, layout=Layout(height='auto', width='100%'), width=960)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from ICET3D import ICET3D\n",
     "\n",
@@ -139,7 +62,7 @@
     "velo1 = dataset.get_velo(0) # Each scan is a Nx4 array of [x,y,z,reflectance]\n",
     "cloud1 = velo1[:,:3]\n",
     "cloud1_tensor = tf.convert_to_tensor(cloud1, np.float32)\n",
-    "velo2 = dataset.get_velo(10) # Each scan is a Nx4 array of [x,y,z,reflectance]\n",
+    "velo2 = dataset.get_velo(2) # Each scan is a Nx4 array of [x,y,z,reflectance]\n",
     "cloud2 = velo2[:,:3]\n",
     "cloud2_tensor = tf.convert_to_tensor(cloud2, np.float32)\n",
     "\n",
@@ -152,20 +75,42 @@
     "DG = False #draw grid\n",
     "DE = False #draw ellipsoids\n",
     "DC = True #draw correspondences\n",
+    "TD = True #use test dataset\n",
+    "\n",
+    "start = time.time()\n",
+    "# #use whole point set\n",
+    "# #---------------------------------------------------------------------------------\n",
+    "# f = tf.constant([50,50,2]) #fidelity in x, y, z # < 5s\n",
+    "# lim = tf.constant([-100.,100.,-100.,100.,-10.,10.]) #needs to encompass every point\n",
+    "# Q, x_hist = ICET3D(cloud1_tensor[:npts], cloud2_tensor[:npts], plt, bounds = lim, \n",
+    "#            fid = f, num_cycles = nc , min_num_pts = mnp, draw = D, draw_grid = DG, \n",
+    "#            draw_ell = DE, draw_corr = DC)\n",
+    "# #---------------------------------------------------------------------------------\n",
     "\n",
     "#just consider small section of image where there are easily identifiable features:\n",
     "#----------------------------------------------------------------------------------\n",
-    "limtest = tf.constant([-20.,20.,-20.,20.,-10.,10.])\n",
-    "print(\"shape\", tf.shape(cloud1_tensor))\n",
-    "cloud1_tensor = tf.squeeze(tf.gather(cloud1_tensor, tf.where(( cloud1_tensor[:,0] > limtest[0] ))))\n",
-    "print(\"shape\", tf.shape(cloud1_tensor))\n",
-    "\n",
+    "limtest = tf.constant([-20.,0.,-20.,0.,-1.5,1.5])\n",
+    "f = tf.constant([10,10,1])\n",
+    "# cloud1_tensor = tf.squeeze(tf.gather(cloud1_tensor, tf.where( (cloud1_tensor[:,0] > limtest[0]))))\t#only works one cond at a time\n",
+    "cloud1_tensor = tf.squeeze(tf.gather(cloud1_tensor, tf.where( tf.math.reduce_all(tf.concat( (\n",
+    "\t(cloud1_tensor[:,0] > limtest[0])[:,None], \n",
+    "\t(cloud1_tensor[:,0] < limtest[1])[:,None], \n",
+    "\t(cloud1_tensor[:,1] > limtest[2])[:,None], \n",
+    "\t(cloud1_tensor[:,1] < limtest[3])[:,None],\n",
+    "\t(cloud1_tensor[:,2] > limtest[4])[:,None], \n",
+    "\t(cloud1_tensor[:,2] < limtest[5])[:,None],\n",
+    "\t), axis = 1 ), axis = 1))))\n",
+    "cloud2_tensor = tf.squeeze(tf.gather(cloud2_tensor, tf.where( tf.math.reduce_all(tf.concat( (\n",
+    "\t(cloud2_tensor[:,0] > limtest[0])[:,None], \n",
+    "\t(cloud2_tensor[:,0] < limtest[1])[:,None], \n",
+    "\t(cloud2_tensor[:,1] > limtest[2])[:,None], \n",
+    "\t(cloud2_tensor[:,1] < limtest[3])[:,None],\n",
+    "\t(cloud2_tensor[:,2] > limtest[4])[:,None], \n",
+    "\t(cloud2_tensor[:,2] < limtest[5])[:,None],), axis = 1 ), axis = 1))))\n",
+    "Q, x_hist = ICET3D(cloud1_tensor, cloud2_tensor, plt, bounds = limtest, \n",
+    "           fid = f, num_cycles = nc , min_num_pts = mnp, draw = D, draw_grid = DG,\n",
+    "           draw_ell = DE, draw_corr = DC, test_dataset = TD)\n",
     "#----------------------------------------------------------------------------------\n",
-    "\n",
-    "start = time.time()\n",
-    "Q, x_hist = ICET3D(cloud1_tensor[:npts], cloud2_tensor[:npts], plt, bounds = lim, \n",
-    "                   fid = f, num_cycles = nc , min_num_pts = mnp, draw = D, draw_grid = DG, draw_ell = DE,\n",
-    "                   draw_corr = DC )\n",
     "#NOTE: Out of Memory Error comes from too high fidelity/ pts in cloud tensor --> 100x100x2x120,000 > 2gb\n",
     "\n",
     "print(\"took\", time.time() - start, \"seconds total\")\n",
