--- a/v2/ICET3D.ipynb
+++ b/v2/ICET3D.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -71,47 +71,52 @@
      "output_type": "stream",
      "text": [
       "tf.Tensor([18130     3], shape=(2,), dtype=int32)\n",
+      "took 0.0779886245727539 seconds with tensorflow\n",
       "\n",
-      " pp1 \n",
-      " tf.Tensor([18130     3], shape=(2,), dtype=int32)\n",
+      " shapes \n",
+      " tf.Tensor([2215    3], shape=(2,), dtype=int32) tf.Tensor([2215    3    3], shape=(3,), dtype=int32) tf.Tensor([136], shape=(1,), dtype=int32)\n",
       "\n",
-      " pp2 \n",
-      " tf.Tensor([18130     3], shape=(2,), dtype=int32)\n",
-      "took 0.06601500511169434 seconds with tensorflow\n",
-      "\n",
-      " npts1 \n",
+      " L \n",
       " tf.Tensor(\n",
-      "[ 60 116 116 113 115 110 114 111 115 119  62 107 200 203 111 196 197 202\n",
-      " 202 197 193 196 203 203 204 113 197 205 199 205 198 203 107   1   2   2\n",
-      "   1   1   1 221  21  60  37  52  42  44  51  44  48  37  57  25  26  54\n",
-      " 101  99 100  99  98 101 106  90  83 115  56 451  53  61 108 446  89 106\n",
-      "  86 118 114  86  99  91  67 103  43   1   1   2 212  31  40  52  53  39\n",
-      "  44  53  46  47  53  42  28  22 104  43  61 448  93  97 102  96 100 101\n",
-      "  91  92 107  62 454 110  71 101  99  93 101 105 116  86 108  95  53  56\n",
-      "   1   1   1 185 182 100 396 400 205 402 402 216   2 187 189 101 400 389\n",
-      " 209 385 199 379], shape=(148,), dtype=int32)\n",
+      "[[[1. 0. 0.]\n",
+      "  [0. 0. 0.]\n",
+      "  [0. 0. 0.]]\n",
       "\n",
-      " enough_pts1 \n",
-      " tf.Tensor(\n",
-      "[ 60 116 116 113 115 110 114 111 115 119  62 107 200 203 111 196 197 202\n",
-      " 202 197 193 196 203 203 204 113 197 205 199 205 198 203 107 221  60  52\n",
-      "  51  57  54 101  99 100  99  98 101 106  90  83 115  56 451  53  61 108\n",
-      " 446  89 106  86 118 114  86  99  91  67 103 212  52  53  53  53 104  61\n",
-      " 448  93  97 102  96 100 101  91  92 107  62 454 110  71 101  99  93 101\n",
-      " 105 116  86 108  95  53  56 185 182 100 396 400 205 402 402 216 187 189\n",
-      " 101 400 389 209 385 199 379], shape=(115,), dtype=int32)\n",
-      "0\n",
-      "took 0.06601524353027344 seconds with tensorflow\n",
+      " [[1. 0. 0.]\n",
+      "  [0. 0. 0.]\n",
+      "  [0. 0. 0.]]\n",
+      "\n",
+      " [[1. 0. 0.]\n",
+      "  [0. 0. 0.]\n",
+      "  [0. 0. 0.]]\n",
+      "\n",
+      " ...\n",
+      "\n",
+      " [[1. 0. 0.]\n",
+      "  [0. 0. 0.]\n",
+      "  [0. 0. 0.]]\n",
+      "\n",
+      " [[1. 0. 0.]\n",
+      "  [0. 0. 0.]\n",
+      "  [0. 0. 0.]]\n",
+      "\n",
+      " [[1. 0. 0.]\n",
+      "  [0. 0. 0.]\n",
+      "  [0. 0. 0.]]], shape=(136, 3, 3), dtype=float32)\n",
+      "0 -----------------\n",
+      "took 0.06501460075378418 seconds with tensorflow\n",
       "\n",
       " x \n",
-      " tf.Tensor([-0.0046444  -0.00211247 -0.         -0.10612448  0.23332712  0.23933673], shape=(6,), dtype=float32)\n",
-      "took 2.982306718826294 seconds total\n"
+      " tf.Tensor(\n",
+      "[ 2.7552457e+00 -3.0925930e-03 -3.3517886e-06 -1.6743934e-02\n",
+      "  1.1456142e-01 -2.7698968e-02], shape=(6,), dtype=float32)\n",
+      "took 5.180672645568848 seconds total\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e18c39f3a8114576b491972b41f37206",
+       "model_id": "e174656c78764671ac3e58681c566bd3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -145,11 +150,11 @@
     "f = tf.constant([10,10,1]) #fidelity in x, y, z # < 5s\n",
     "lim = tf.constant([-100.,100.,-100.,100.,-10.,10.]) #needs to encompass every point\n",
     "nc = 1\n",
-    "mnp = 50\n",
+    "mnp = 5\n",
     "npts = 100000\n",
     "D = True #draw sim\n",
     "DG = False #draw grid\n",
-    "DE = False #draw ellipsoids\n",
+    "DE = True #draw ellipsoids\n",
     "DC = True #draw correspondences\n",
     "TD = True #use test dataset\n",
     "\n",
@@ -235,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#test H stuff\n"
+    "tf.math.greater(tf.ones(3), tf.constant([-1.,2.,3.]))"
    ]
   },
   {
