got simulation to converge on simple T-Hallway test case with no L2-pruning

--- a/v2/ICET3D.ipynb
+++ b/v2/ICET3D.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -70,53 +70,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tf.Tensor([18130     3], shape=(2,), dtype=int32)\n",
-      "took 0.0779886245727539 seconds with tensorflow\n",
+      "tf.Tensor([44130     3], shape=(2,), dtype=int32)\n",
+      "took 0.09404802322387695 seconds with tensorflow\n",
       "\n",
       " shapes \n",
-      " tf.Tensor([2215    3], shape=(2,), dtype=int32) tf.Tensor([2215    3    3], shape=(3,), dtype=int32) tf.Tensor([136], shape=(1,), dtype=int32)\n",
-      "\n",
-      " L \n",
-      " tf.Tensor(\n",
-      "[[[1. 0. 0.]\n",
-      "  [0. 0. 0.]\n",
-      "  [0. 0. 0.]]\n",
-      "\n",
-      " [[1. 0. 0.]\n",
-      "  [0. 0. 0.]\n",
-      "  [0. 0. 0.]]\n",
-      "\n",
-      " [[1. 0. 0.]\n",
-      "  [0. 0. 0.]\n",
-      "  [0. 0. 0.]]\n",
-      "\n",
-      " ...\n",
-      "\n",
-      " [[1. 0. 0.]\n",
-      "  [0. 0. 0.]\n",
-      "  [0. 0. 0.]]\n",
-      "\n",
-      " [[1. 0. 0.]\n",
-      "  [0. 0. 0.]\n",
-      "  [0. 0. 0.]]\n",
-      "\n",
-      " [[1. 0. 0.]\n",
-      "  [0. 0. 0.]\n",
-      "  [0. 0. 0.]]], shape=(136, 3, 3), dtype=float32)\n",
+      " tf.Tensor([2215    3], shape=(2,), dtype=int32) tf.Tensor([2215    3    3], shape=(3,), dtype=int32) tf.Tensor([138], shape=(1,), dtype=int32)\n",
+      "y0 tf.Tensor([137   3], shape=(2,), dtype=int32)\n",
       "0 -----------------\n",
-      "took 0.06501460075378418 seconds with tensorflow\n",
+      "took 0.08701944351196289 seconds with tensorflow\n",
+      "\n",
+      " LUT \n",
+      " tf.Tensor([111   3   3], shape=(3,), dtype=int32)\n",
       "\n",
       " x \n",
-      " tf.Tensor(\n",
-      "[ 2.7552457e+00 -3.0925930e-03 -3.3517886e-06 -1.6743934e-02\n",
-      "  1.1456142e-01 -2.7698968e-02], shape=(6,), dtype=float32)\n",
-      "took 5.180672645568848 seconds total\n"
+      " tf.Tensor([-9.776196    0.2924645   0.000052    0.23766309  0.27814946  0.02648955], shape=(6,), dtype=float32)\n",
+      "took 5.999422311782837 seconds total\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e174656c78764671ac3e58681c566bd3",
+       "model_id": "0003be595e0c45e49b13a7c712ecacd2",
        "version_major": 2,
        "version_minor": 0
       },
