more work on L2 pruning

--- a/v2/ICET3D.ipynb
+++ b/v2/ICET3D.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -71,26 +71,29 @@
      "output_type": "stream",
      "text": [
       "tf.Tensor([44130     3], shape=(2,), dtype=int32)\n",
-      "took 0.09404802322387695 seconds with tensorflow\n",
+      "took 0.09102034568786621 seconds with tensorflow\n",
       "\n",
       " shapes \n",
       " tf.Tensor([2215    3], shape=(2,), dtype=int32) tf.Tensor([2215    3    3], shape=(3,), dtype=int32) tf.Tensor([138], shape=(1,), dtype=int32)\n",
-      "y0 tf.Tensor([137   3], shape=(2,), dtype=int32)\n",
+      "y0 tf.Tensor([136   3], shape=(2,), dtype=int32)\n",
       "0 -----------------\n",
-      "took 0.08701944351196289 seconds with tensorflow\n",
+      "took 0.09052395820617676 seconds with tensorflow\n",
       "\n",
       " LUT \n",
-      " tf.Tensor([111   3   3], shape=(3,), dtype=int32)\n",
+      " tf.Tensor([110   3   3], shape=(3,), dtype=int32)\n",
+      "\n",
+      " dx \n",
+      " tf.Tensor([-0.84435415  0.04192933 -0.00546423  0.01024881  0.01120149  0.09072533], shape=(6,), dtype=float32)\n",
       "\n",
       " x \n",
-      " tf.Tensor([-9.776196    0.2924645   0.000052    0.23766309  0.27814946  0.02648955], shape=(6,), dtype=float32)\n",
-      "took 5.999422311782837 seconds total\n"
+      " tf.Tensor([ 0.84435415 -0.04192933  0.00546423 -0.01024881 -0.01120149 -0.09072533], shape=(6,), dtype=float32)\n",
+      "took 7.110535621643066 seconds total\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0003be595e0c45e49b13a7c712ecacd2",
+       "model_id": "eea7dbcb5cd1488488f90af39578f70b",
        "version_major": 2,
        "version_minor": 0
       },
