more head scratching, still getting small constant error offsets...

--- a/v2/ICET3D.ipynb
+++ b/v2/ICET3D.ipynb
@@ -78,7 +78,16 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([44130     3], shape=(2,), dtype=int32)\n",
+      "took 0.30806779861450195 seconds with tensorflow\n"
+     ]
+    }
+   ],
    "source": [
     "from ICET3D import ICET3D\n",
     "\n",
@@ -100,7 +109,7 @@
     "cloud1_tensor = None\n",
     "cloud2_tensor = None\n",
     "\n",
-    "nc = 10\n",
+    "nc = 15\n",
     "mnp = 50\n",
     "npts = 100000\n",
     "D = False #draw sim\n",
@@ -124,7 +133,8 @@
     "#----------------------------------------------------------------------------------\n",
     "limtest = tf.constant([-20.,0.,-20.,0.,-1.5,1.5])\n",
     "# f = tf.constant([35,35,35])\n",
-    "f = tf.constant([15,15,15])\n",
+    "# f = tf.constant([15,15,15])\n",
+    "f = tf.constant([16,16,16])\n",
     "# cloud1_tensor = tf.squeeze(tf.gather(cloud1_tensor, tf.where( (cloud1_tensor[:,0] > limtest[0]))))\t#only works one cond at a time\n",
     "\n",
     "Q, x_hist = ICET3D(cloud1_tensor, cloud2_tensor, plt, bounds = limtest, \n",
@@ -137,7 +147,7 @@
     "\n",
     "# print(tf.sqrt(tf.math.abs(Q)))\n",
     "ans = np.sqrt(abs(Q.numpy()))\n",
-    "print(ans[0,0], ans[1,1], ans[2,2])\n",
+    "print(ans[0,0], ans[1,1], ans[2,2], ans[3,3], ans[4,4], ans[5,5])\n",
     "ViewInteractiveWidget(plt.window)"
    ]
   },
@@ -159,9 +169,9 @@
     "ax1.plot(x_hist[:,3:].numpy())\n",
     "ax1.legend(['phi','theta','psi'])\n",
     "\n",
-    "# ax1.plot(np.linspace(1,50,15), 0.12*np.ones(15), 'g--')\n",
-    "# ax1.plot(np.linspace(1,50,15), 0.05*np.ones(15), 'r--')\n",
-    "# ax1.plot(np.linspace(1,50,15), 0.02*np.ones(15), 'b--')"
+    "ax1.plot(np.linspace(1,15,15), 0.12*np.ones(15), 'g--')\n",
+    "ax1.plot(np.linspace(1,15,15), 0.05*np.ones(15), 'r--')\n",
+    "ax1.plot(np.linspace(1,15,15), 0.02*np.ones(15), 'b--')"
    ]
   },
   {
@@ -187,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 472,
    "metadata": {},
    "outputs": [
     {
