getting ground truth OXTS packets for KITTI data, need to figure out how to align axis of lidar data with NEU

--- a/v2/ICET3D.ipynb
+++ b/v2/ICET3D.ipynb
@@ -4668,7 +4668,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.607075443939367 -0.20875878011568882 -0.030616760249998265 -0.0006889999999999986 -0.014852 -0.028286000000000033\n"
+     ]
+    }
+   ],
+   "source": [
+    "#get ground truth movement from pykitti\n",
+    "import pykitti\n",
+    "\n",
+    "basedir = 'C:/kitti/'\n",
+    "date = '2011_09_26'\n",
+    "drive = '0005'\n",
+    "dataset = pykitti.raw(basedir, date, drive)\n",
+    "velo1 = dataset.get_velo(0)\n",
+    "poses0 = dataset.oxts[0]\n",
+    "poses1 = dataset.oxts[2]\n",
+    "# print(poses0)\n",
+    "\n",
+    "lat0 = poses0.packet.lat\n",
+    "lon0 = poses0.packet.lon\n",
+    "alt0 = poses0.packet.alt\n",
+    "lat1 = poses1.packet.lat\n",
+    "lon1 = poses1.packet.lon\n",
+    "alt1 = poses1.packet.alt\n",
+    "# print(lat0, lon0, alt0)\n",
+    "\n",
+    "#TODO: align ICET estimate outputs with axis of NEU (North East Up)\n",
+    "dx = (lon0-lon1)*40000*np.cos((lat0+lat1)*np.pi/360)/360 * 1000 \n",
+    "dy = (lat0-lat1)*40000/360 * 1000\n",
+    "dz = (alt0-alt1)\n",
+    "droll = (poses0.packet.roll - poses1.packet.roll)\n",
+    "dpitch = (poses0.packet.pitch - poses1.packet.pitch)\n",
+    "dyaw = (poses0.packet.yaw - poses1.packet.yaw)\n",
+    "print(dx,dy,dz,droll, dpitch, dyaw)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -4676,10 +4720,9 @@
      "output_type": "stream",
      "text": [
       "[1.000000e+00 1.197625e-11 1.704638e-10 1.110223e-16 1.197625e-11\n",
-      " 1.000000e+00 3.562503e-10 0.000000e+00 1.704638e-10 3.562503e-10\n",
-      " 1.000000e+00 2.220446e-16]\n",
-      "[ 0.9999931  -0.00247504 -0.00275584  0.00117395  0.00246866  0.9999942\n",
-      " -0.00231683 -0.02241474  0.00276156  0.00231001  0.9999935   1.127607  ]\n"
+      " 1.000000e+00]\n",
+      "[ 0.9999931  -0.00247504 -0.00275584  0.00117395  0.00246866  0.9999942 ]\n",
+      "(2761, 12)\n"
      ]
     }
    ],
@@ -4687,8 +4730,10 @@
     "#get ground truth poses from text file??\n",
     "path = r\"C:\\kitti\\2011_09_26\\2011_09_26_drive_0005_sync\\poses\\05.txt\"\n",
     "gt = np.loadtxt(path)\n",
-    "print(gt[0])\n",
-    "print(gt[2])"
+    "print(gt[0, :6])\n",
+    "print(gt[2, :6])\n",
+    "print(np.shape(gt))\n",
+    "# print(gt[-1, :6])"
    ]
   },
   {
