identified widest corners in occupied voxels

--- a/voxel/OcclusionCulling.ipynb
+++ b/voxel/OcclusionCulling.ipynb
@@ -9,17 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    },
     {
      "data": {
       "application/javascript": [
@@ -64,13 +56,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1240149fcdf84b929b3451e3593568a2",
+       "model_id": "65e14307a4c2461e997ee2b1abada2af",
        "version_major": 2,
        "version_minor": 0
       },
@@ -83,222 +77,43 @@
     }
    ],
    "source": [
-    "# c = cloud\n",
-    "c = np.random.randn(100,3)*np.array([20,20,1]) #test random points\n",
-    "S = scene(cloud = c, fid = 50)\n",
+    "c = cloud\n",
+    "# c = np.random.randn(10,3)*np.array([20,20,1]) #test random points\n",
+    "# c = np.array([[10,-20,-1]])\n",
+    "S = scene(cloud = c, fid = 10)\n",
     "\n",
     "ViewInteractiveWidget(S.plt.window)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
+   "execution_count": 308,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 2.18816464e+00 -6.96477511e+00 -1.01759721e+00]\n",
-      " [-1.62047245e+01  3.48719493e+01  2.41378655e-01]\n",
-      " [-5.05510621e+00 -2.99519341e+01 -7.12216043e-01]\n",
-      " [ 2.41386244e+01 -4.01458234e+01  2.86106011e-01]\n",
-      " [ 1.06389267e+01 -2.84039383e+01  1.13619693e+00]\n",
-      " [-1.26050524e+01  6.69094006e-01  3.98333620e-01]\n",
-      " [ 1.18372264e+01 -1.11638449e+01 -3.52239793e-01]\n",
-      " [ 2.00808892e+01 -5.94685669e+00  6.18489737e-01]\n",
-      " [-1.74586303e+01 -3.28646925e+01 -1.91398305e-01]\n",
-      " [ 1.68422790e+00 -3.01272471e+01 -1.20029734e-01]\n",
-      " [ 1.37115404e+01  1.80976925e+01 -7.14697590e-01]\n",
-      " [ 7.59013349e+00  1.99464268e+01  3.06115511e-01]\n",
-      " [-8.98753370e+00 -1.81596756e+01  9.93273310e-01]\n",
-      " [ 1.23113612e+01 -1.18913199e+01 -5.99810269e-01]\n",
-      " [-1.62987296e+01 -1.07791217e+01 -1.29749532e+00]\n",
-      " [-1.76239671e+01 -1.34547133e+01 -3.94112666e-01]\n",
-      " [-7.31309932e+00  1.09604597e+00  1.94205821e+00]\n",
-      " [-7.05351499e-01 -2.58278483e+01 -1.37412873e+00]\n",
-      " [-6.59543203e+01 -4.61287085e+00  7.56635464e-01]\n",
-      " [-1.23328745e+01  1.09489068e+01 -2.24943205e+00]\n",
-      " [ 7.78759654e+00 -2.45013079e+01 -4.43395082e-01]\n",
-      " [-4.40962584e+01  1.04017852e+01  2.01224601e-01]\n",
-      " [ 1.80136265e+01  6.44766503e+00  6.58038139e-01]\n",
-      " [ 6.66538664e+00 -4.81969045e+01  1.00183546e+00]\n",
-      " [-2.52265292e+01 -4.32839070e+01 -9.51183653e-01]\n",
-      " [ 1.02616692e+01 -2.46351649e+01 -1.75513884e+00]\n",
-      " [-2.66372756e+01 -7.62304466e+00 -2.42391418e-01]\n",
-      " [ 1.21144803e+01  3.16656660e+00 -3.33648590e-01]\n",
-      " [ 1.75570947e+01  1.35422323e+01  5.86696843e-01]\n",
-      " [-1.88520515e+01 -1.41559973e+01 -4.80606425e-02]\n",
-      " [-2.00968881e+01 -1.82678019e+01  8.42941930e-01]\n",
-      " [-3.44500982e+01  1.73151072e+01  4.91909086e-01]\n",
-      " [ 2.06369458e-01 -1.81321814e+01 -1.29753369e+00]\n",
-      " [-1.10183729e+01 -9.98625300e+00 -1.83688812e+00]\n",
-      " [ 7.80081111e-02 -1.05942311e+01  2.70243988e-01]\n",
-      " [ 1.68542250e+01  6.80523004e-01 -1.97804569e-01]\n",
-      " [ 5.75854198e+00  2.83540776e+01  1.39265288e-01]\n",
-      " [-2.58033917e+01  9.88405941e+00 -8.96587889e-01]\n",
-      " [-2.59818828e+00  1.18884593e+01  1.69433373e-01]\n",
-      " [-3.89364089e+00  6.52539372e+00  1.34881195e+00]\n",
-      " [-9.90031791e+00  1.73809430e+01 -1.67726180e+00]\n",
-      " [-2.14675169e+00  1.65074002e+01  3.59952752e-01]\n",
-      " [ 1.43370526e+01  4.35639387e+00 -3.93778598e-01]\n",
-      " [ 1.87561667e+00  1.36792663e+00 -2.88583927e-01]\n",
-      " [-2.20169229e+01  3.30826701e+01 -1.20530236e+00]\n",
-      " [ 1.19591842e+01 -9.80756216e-01  8.23316192e-01]\n",
-      " [-1.90605170e+01  1.24408977e+01 -1.44794716e+00]\n",
-      " [ 8.91087289e+00  4.51391972e+01 -5.75986742e-01]\n",
-      " [-1.47065159e+01 -2.47139592e+01 -2.97733197e-01]\n",
-      " [ 9.89076758e+00  6.60910846e+00  1.04200419e-01]\n",
-      " [-1.35432898e+01 -2.71909801e+00 -5.68021032e-01]\n",
-      " [ 1.53122441e+01  5.18250916e+00 -1.76456519e+00]\n",
-      " [ 7.70574434e+00  1.59931794e+01 -5.47591162e-01]\n",
-      " [ 9.82097754e+00 -3.49710915e+01  4.55643215e-01]\n",
-      " [ 2.30854514e+01 -1.92907897e+00 -9.82133001e-02]\n",
-      " [-1.59815643e+01 -7.03609912e-01  5.19737460e-01]\n",
-      " [ 1.91102357e+01  1.64375091e+01 -9.45249506e-01]\n",
-      " [ 2.91758717e+01 -9.95900116e+00  6.63604061e-02]\n",
-      " [-1.19556436e+01 -3.96838644e+01  3.17769232e-01]\n",
-      " [-1.14296647e+00  2.53614393e-01  4.06007625e-01]\n",
-      " [-3.46601595e+00  9.03672557e+00 -7.83153332e-01]\n",
-      " [-9.37982563e+00  1.74197986e+01  2.61981065e+00]\n",
-      " [-9.46636172e+00 -5.65576230e+01  3.51828409e-02]\n",
-      " [ 5.74534876e+00  1.28030135e+01 -1.72484799e+00]\n",
-      " [ 3.71062880e+00 -1.06936963e+01  6.86869016e-01]\n",
-      " [-2.07346826e+01 -5.45632307e+01 -1.21046188e+00]\n",
-      " [-3.17472718e+01  2.03511151e+01 -7.17656215e-01]\n",
-      " [-4.85769429e+01 -4.68311363e+00 -1.86652265e+00]\n",
-      " [ 1.21362282e+01 -3.38144349e+01  1.02043865e+00]\n",
-      " [ 2.32979227e+01  1.16804580e+01 -2.30097057e-01]\n",
-      " [ 1.72788295e+01 -1.37691880e+01  3.86075644e-01]\n",
-      " [-5.79535830e-01  1.23862831e+01 -3.64024729e-01]\n",
-      " [ 9.63609768e+00 -3.08584548e+01 -1.39192679e+00]\n",
-      " [-1.86637908e+01  2.02901445e+00 -1.42588231e+00]\n",
-      " [-2.24901305e+01  7.47750521e-02 -2.19678698e-01]\n",
-      " [-1.37277037e+01 -1.40721705e+01  9.53901401e-01]\n",
-      " [-1.79250345e+01 -2.25612123e-01  9.09260205e-01]\n",
-      " [-1.12174733e+01  7.62688991e+00 -2.14401583e-01]\n",
-      " [ 2.14027296e+01 -1.78310039e+01 -1.06806488e+00]\n",
-      " [ 7.44675921e+00 -3.89410265e+00  2.38434113e-01]\n",
-      " [-2.17747571e+01  1.78195192e+01  1.02952209e+00]\n",
-      " [-1.66180026e+01 -2.78332588e+01 -3.48769070e-01]\n",
-      " [-1.07396718e+01  1.57807790e+01  3.89507936e-01]\n",
-      " [-3.94654634e+01  2.45620407e+00 -6.58243032e-01]\n",
-      " [-3.02748068e+01 -1.96019765e+01  7.80242139e-02]\n",
-      " [ 2.81934142e+00 -2.35112036e+01 -7.78136230e-01]\n",
-      " [-1.86851313e+01  2.44095830e+01  1.10687297e+00]\n",
-      " [ 1.85883055e+01 -1.37002553e+01 -9.75526607e-01]\n",
-      " [ 2.11289275e+01  1.01035450e+01 -1.61573726e+00]\n",
-      " [ 1.58926095e+01 -2.64181250e+00  5.27964249e-01]\n",
-      " [-4.45584534e+00 -2.96527573e+00  5.61679201e-01]\n",
-      " [-9.96999021e+00 -6.57247524e+00 -1.31137469e+00]\n",
-      " [ 1.52623391e+00 -2.72377253e+00  1.14071446e+00]\n",
-      " [-1.26898740e+01 -2.21233309e+01  9.01979798e-01]\n",
-      " [ 7.89892717e+00  1.37891810e+01 -6.79897193e-01]\n",
-      " [ 2.68590166e+00  1.21891128e+01  1.68358782e+00]\n",
-      " [-1.48835942e+01  1.15852639e+01 -9.45471655e-01]\n",
-      " [ 7.28244561e+00  2.10873838e+01 -2.25674658e-01]\n",
-      " [-1.86289928e+01  3.13458828e+01 -3.98281963e-01]\n",
-      " [ 1.81292743e+01  7.65148437e+00  1.36335857e-01]]\n",
-      "[[ 30. -10.   0.]\n",
-      " [ 24.  12.   0.]\n",
-      " [ 24.  -2.   0.]\n",
-      " [ 24. -40.   0.]\n",
-      " [ 22.  10.  -2.]\n",
-      " [ 22. -18.  -2.]\n",
-      " [ 20.  16.   0.]\n",
-      " [ 20.  -6.   0.]\n",
-      " [ 18.  14.   0.]\n",
-      " [ 18.   8.   0.]\n",
-      " [ 18.   6.   0.]\n",
-      " [ 18. -14.   0.]\n",
-      " [ 16.   6.  -2.]\n",
-      " [ 16.   0.   0.]\n",
-      " [ 16.  -2.   0.]\n",
-      " [ 14.  18.   0.]\n",
-      " [ 14.   4.   0.]\n",
-      " [ 12.   4.   0.]\n",
-      " [ 12.   0.   0.]\n",
-      " [ 12. -12.   0.]\n",
-      " [ 12. -34.   2.]\n",
-      " [ 10.   6.   0.]\n",
-      " [ 10. -24.  -2.]\n",
-      " [ 10. -28.   2.]\n",
-      " [ 10. -30.  -2.]\n",
-      " [ 10. -34.   0.]\n",
-      " [  8.  46.   0.]\n",
-      " [  8.  22.   0.]\n",
-      " [  8.  20.   0.]\n",
-      " [  8.  16.   0.]\n",
-      " [  8.  14.   0.]\n",
-      " [  8.  -4.   0.]\n",
-      " [  8. -24.   0.]\n",
-      " [  6.  28.   0.]\n",
-      " [  6.  12.  -2.]\n",
-      " [  6. -48.   2.]\n",
-      " [  4. -10.   0.]\n",
-      " [  2.  12.   2.]\n",
-      " [  2.   2.   0.]\n",
-      " [  2.  -2.   2.]\n",
-      " [  2.  -6.  -2.]\n",
-      " [  2. -24.   0.]\n",
-      " [  2. -30.   0.]\n",
-      " [  0.  12.   0.]\n",
-      " [  0. -10.   0.]\n",
-      " [  0. -18.  -2.]\n",
-      " [  0. -26.  -2.]\n",
-      " [ -2.  16.   0.]\n",
-      " [ -2.  12.   0.]\n",
-      " [ -2.   0.   0.]\n",
-      " [ -4.  10.   0.]\n",
-      " [ -4.   6.   2.]\n",
-      " [ -4.  -2.   0.]\n",
-      " [ -6. -30.   0.]\n",
-      " [ -8.   2.   2.]\n",
-      " [ -8. -18.   0.]\n",
-      " [-10.  18.   2.]\n",
-      " [-10.  18.  -2.]\n",
-      " [-10.  16.   0.]\n",
-      " [-10.  -6.  -2.]\n",
-      " [-12.  10.  -2.]\n",
-      " [-12.   8.   0.]\n",
-      " [-12.   0.   0.]\n",
-      " [-12. -10.  -2.]\n",
-      " [-12. -22.   0.]\n",
-      " [-12. -40.   0.]\n",
-      " [-14.  12.   0.]\n",
-      " [-14.  -2.   0.]\n",
-      " [-14. -14.   0.]\n",
-      " [-14. -24.   0.]\n",
-      " [-16.  34.   0.]\n",
-      " [-16.   0.   0.]\n",
-      " [-16. -10.  -2.]\n",
-      " [-16. -28.   0.]\n",
-      " [-18.  32.   0.]\n",
-      " [-18.  24.   2.]\n",
-      " [-18.   2.  -2.]\n",
-      " [-18.   0.   0.]\n",
-      " [-18. -14.   0.]\n",
-      " [-18. -32.   0.]\n",
-      " [-20.  12.  -2.]\n",
-      " [-20. -18.   0.]\n",
-      " [-22.  34.  -2.]\n",
-      " [-22.  18.   2.]\n",
-      " [-22.   0.   0.]\n",
-      " [-26.  10.   0.]\n",
-      " [-26.  -8.   0.]\n",
-      " [-26. -44.   0.]\n",
-      " [-30. -20.   0.]\n",
-      " [-32.  20.   0.]\n",
-      " [-34.  18.   0.]\n",
-      " [-40.   2.   0.]\n",
-      " [-44.  10.   0.]\n",
-      " [-48.  -4.  -2.]]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ac74f82dca4a42c39e9eff935ba792f4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "ViewInteractiveWidget(height=960, layout=Layout(height='auto', width='100%'), width=960)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "print(c)\n",
-    "print(S.grid[S.occupied])"
+    "c = np.array([[10,-20,-1]])\n",
+    "# c = np.random.randn(10,3)*np.array([20,20,1]) #test random points\n",
+    "S2 = scene(cloud = c, fid = 6)\n",
+    "S2.cull()\n",
+    "S2.plt.show(S2.disp)\n",
+    "ViewInteractiveWidget(S2.plt.window)"
    ]
   },
   {
