got basic occlusion culling working in 3D- looking into optimization now

--- a/voxel/OcclusionCulling.ipynb
+++ b/voxel/OcclusionCulling.ipynb
@@ -64,7 +64,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65e14307a4c2461e997ee2b1abada2af",
+       "model_id": "a8434276f3b74cc1920aa5a7f149ef53",
        "version_major": 2,
        "version_minor": 0
       },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 114,
    "metadata": {
     "scrolled": false
    },
@@ -95,7 +95,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac74f82dca4a42c39e9eff935ba792f4",
+       "model_id": "8282f60cc07042f598e2cfc30d8b4351",
        "version_major": 2,
        "version_minor": 0
       },
@@ -108,29 +108,31 @@
     }
    ],
    "source": [
-    "c = np.array([[10,-20,-1]])\n",
-    "# c = np.random.randn(10,3)*np.array([20,20,1]) #test random points\n",
-    "S2 = scene(cloud = c, fid = 6)\n",
-    "S2.cull()\n",
+    "c = np.array([[10,-10,-1]])\n",
+    "# c = np.random.randn(10,3)*np.array([50,50,1]) #test random points\n",
+    "# c = cloud\n",
+    "S2 = scene(cloud = c, fid = 10, cull = True)\n",
     "S2.plt.show(S2.disp)\n",
     "ViewInteractiveWidget(S2.plt.window)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Submodule to manage polygonal meshes.\n"
+      "<class 'tuple'>\n"
      ]
     }
    ],
    "source": [
-    "print(mesh.__doc__)"
+    "# print(mesh.__doc__)\n",
+    "test = np.where(S2.occluded == 1)\n",
+    "print(test)"
    ]
   },
   {
