starting  to reconstruct occupancy grid in spherical coordinates

--- a/voxel/OcclusionCulling.ipynb
+++ b/voxel/OcclusionCulling.ipynb
@@ -87,15 +87,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 183,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[25.          1.17809725  0.78539816]\n",
+      "p1 [ 6.76495125 16.33203706 17.67766953] \n",
+      " p2 [12.5        12.5        17.67766953]\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8282f60cc07042f598e2cfc30d8b4351",
+       "model_id": "a1defdb72bcb4be5b7708c4663769344",
        "version_major": 2,
        "version_minor": 0
       },
@@ -109,9 +118,9 @@
    ],
    "source": [
     "c = np.array([[10,-10,-1]])\n",
-    "# c = np.random.randn(10,3)*np.array([50,50,1]) #test random points\n",
+    "# c = np.random.randn(10,3)*np.array([30,30,1]) #test random points\n",
     "# c = cloud\n",
-    "S2 = scene(cloud = c, fid = 10, cull = True)\n",
+    "S2 = scene(cloud = c, fid = 10, cull = True, coord = 1)\n",
     "S2.plt.show(S2.disp)\n",
     "ViewInteractiveWidget(S2.plt.window)"
    ]
