--- a/voxel/OcclusionCulling.ipynb
+++ b/voxel/OcclusionCulling.ipynb
@@ -64,7 +64,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8434276f3b74cc1920aa5a7f149ef53",
+       "model_id": "d6be9746bde3444fa9b99a664d6db402",
        "version_major": 2,
        "version_minor": 0
       },
@@ -87,22 +87,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 83,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[25.         -0.62831853  0.9817477 ]\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cdd37ecf6af94f39bf4ddf860641f719",
+       "model_id": "ac9c400dcdc742a0981bdb081ff32bfd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -125,21 +118,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'tuple'>\n"
+     "ename": "IndexError",
+     "evalue": "index 11 is out of bounds for axis 0 with size 10",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-86-8be74a18c666>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mtest\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m11\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m: index 11 is out of bounds for axis 0 with size 10"
      ]
     }
    ],
    "source": [
-    "# print(mesh.__doc__)\n",
-    "test = np.where(S2.occluded == 1)\n",
-    "print(test)"
+    "test = np.zeros([10,3])\n",
+    "print(test[11])"
    ]
   },
   {
@@ -192,17 +188,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "s  = 10*1j\n",
-    "np.mgrid[0:100:s]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#if v is multiple of 100, add 100, else pass\n",
+    "v = 500\n",
+    "100*((100-(v%100))//100)"
+   ]
   },
   {
    "cell_type": "code",
