fixed bug with jumping voxels at end of ring

--- a/voxel/OcclusionCulling.ipynb
+++ b/voxel/OcclusionCulling.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "100"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,6 +211,35 @@
     "v = 500\n",
     "100*((100-(v%100))//100)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#if v is between n*100+95 and (n+1)*100, add 100, else pass\n",
+    "v = 294\n",
+    "100*(((v%100) + 5)//100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
