--- a/v3/ICET_spherical.ipynb
+++ b/v3/ICET_spherical.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
     {
      "data": {
       "application/javascript": [
@@ -50,17 +58,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.]\n",
-      " [0.]\n",
-      " [0.]]\n"
+      "tf.Tensor(\n",
+      "[nan  2. nan  0.  1.  3.  1.  2.  2.  3.  1. nan  2.  3.  2.  0.  1. nan\n",
+      "  3.  2.  2.  0. nan  2. nan  3.  1.  2.  1.  0.  2.  1.  2.  2.  1.  2.\n",
+      " nan nan nan  0.  2.  2. nan  2.  0.  1. nan  1.  2.  1. nan nan  2.  3.\n",
+      "  1.  1.  3.  2. nan nan  0.  3. nan  2. nan  2.  2. nan  0.  3. nan  2.\n",
+      "  0.  1. nan  0.  3.  1.  1.  2.  3. nan nan  2. nan nan nan  0.  0.  2.\n",
+      " nan  2.  2.  0.  1.  0. nan nan  1.  0.  0.  2.  0.  2.  1. nan  2.  1.\n",
+      " nan  1.  3.  2.  2.  2. nan  3.  0.  1.  0. nan nan  0.  0. nan  3. nan\n",
+      " nan  2.  1. nan  1.  3. nan nan  1.  0.  1.  3. nan  2.  0. nan  1. nan\n",
+      "  0.  2.  2. nan  2. nan  1.  3.  1.  0.  0. nan  1.  1. nan  2.  3.  3.\n",
+      "  2.  1.  1.  3. nan  1.  1.  1.  1. nan  0.  2. nan  3. nan  0. nan  2.\n",
+      "  2. nan  1.  1.  1.  0.  3.  1.  2.  1.  2.  1.  1.  2. nan  0.  0.  1.\n",
+      " nan nan  1.  1.  1. nan  1.  1.  1.  0.  2.  1.  1. nan  1.  2.  2.  1.\n",
+      "  2.  2.  3.  3. nan  2.  3.  0.  2.  0.  1.  3.  3.  3. nan  1.  1. nan\n",
+      "  2.  2.  1.  1.  0. nan  1.  1.  1.  1.  3. nan  2.  0.  1.  3.  1.  1.\n",
+      "  1.  2.  1. nan  2.  1.  1. nan nan  1.  1.  2. nan nan  1.  0.  1.  1.\n",
+      "  0. nan  2.  3.  2.  1.  2. nan  1.  2. nan  2. nan  2.  2.  2. nan nan\n",
+      "  3.  2.  3.  1.  1.  3. nan  1. nan  2.  1.  1.  2.  2.  1. nan  1.  1.\n",
+      " nan  0.  2.  3. nan  2.  3.  1.  3.  1.  2. nan nan  0.  1.  0.  1.  1.\n",
+      "  1.  2.  1.  2.  1. nan  0.  3. nan  0.  2.  2. nan  0.  3.  3.  1.  0.\n",
+      "  3.  0.  2. nan nan nan  2. nan nan  2.  0.  0.  1. nan  3.  2.  2. nan\n",
+      " nan  3.  2.  1.  1.  3.  0. nan  2.  1.  2.  1.  1.  3.  1.  1.  1.  2.\n",
+      "  1.  1. nan nan  2.  1.  1. nan  1.  0.  1. nan  3.  1.  0.  1.  2. nan\n",
+      "  0. nan  0.  3. nan  0. nan  1.  2.  1.  3.  1. nan  2.  3. nan  1.  3.\n",
+      " nan  0.  3.  0.  0. nan nan  3.  3.  2.  2.  1.  1.  0.  1.  1.  1.  3.\n",
+      "  2.  1.  2.  1.  2.  3.  3.  2. nan  2.  3.  3.  2.  0. nan  1.  0.  2.\n",
+      "  0. nan  1.  3.  0.  2.  1.  2. nan  1.  2.  2.  1. nan  2.  0. nan  2.\n",
+      "  3.  1. nan  1.  2.  1.  3.  1.  1.  1.  1.  3. nan  3.  1.  2.  2.  1.\n",
+      "  1. nan  2.  1. nan  0.  3.  1.  1.  2.  2. nan  0.  0.  2.  1.  2.  1.\n",
+      " nan  2.  1.  3.  1.  3.  1.  3.  3.  2.  3.  0.  0.  1. nan  2.  2.  2.\n",
+      " nan  2.  0.  1. nan  3.  0.  2. nan nan  1. nan  1.  1.  3.  2. nan  1.\n",
+      " nan  1. nan nan  2.  1.  1. nan  0.  0. nan  3.  0.  1. nan  1.  2.  0.\n",
+      "  2.  2.  2.  3.  2.  1.  1.  1.  3.  2.  3.  0.  2.  2.  2.  1. nan  1.\n",
+      "  0.  2.  2.  2.  2.  3.  2.  3.  3.  2. nan  1.  0. nan  0.  2.  2.  2.\n",
+      "  1.  2.  1. nan  0.  2.  1.  1.  0.  1.  3. nan nan  3.  1.  2. nan  0.\n",
+      "  0.  3.  1.  2.  1.  2.  1.  1.  2.  1.  3.  0.  2. nan nan  3.  0.  3.\n",
+      "  2.  3.  0.  1.  0. nan  3. nan nan nan  3.  2.  1.  3.  1.  1. nan  0.\n",
+      "  1.  2.  2.  1.  3.  2.  2.  2.  2. nan  2. nan  0.  3.  0.  0.  3. nan\n",
+      "  2.  3. nan  1.  0.  1.  1. nan nan nan nan  0.  1.  0.  1.  3. nan  0.\n",
+      "  0. nan  3. nan  0.  0.  2.  1. nan  2. nan  1.  0.  1. nan  1.  2.  0.\n",
+      "  2.  2. nan  0.  3.  0.  2.  0.  0.  2.  1. nan nan  1.  2.  0.  0.  1.\n",
+      "  1.  2.  2.  1.  2.  0.  1.  0.  0.  1.  1.  2.  3.  1. nan  2.  1.  2.\n",
+      "  0.  2. nan  3.  1.  0. nan  0. nan nan  0.  1.  1. nan  2. nan  1.  2.\n",
+      "  3. nan nan nan  2.  1.  1. nan  1.  1.  2.  0.  2.  1.  3.  2.  2.  2.\n",
+      " nan  2.  3.  1.  2.  1.  1. nan  3.  3.  1.  0.  1. nan  2. nan  3.  2.\n",
+      "  2.  2.  1.  1.  2.  3.  1. nan  1. nan  2.  1.  2.  0.  0.  3.  1.  2.\n",
+      "  2.  1. nan  1.  2.  1. nan nan  2.  3.  1.  2.  0.  2.  3.  2.  2.  0.\n",
+      "  3.  3. nan  2.  1. nan nan nan nan  0.  2.  2.  2. nan  1.  1.  3.  2.\n",
+      "  3.  1.  0. nan  1.  2.  2.  3.  2.  1.  3.  3.  1. nan  0.  3.  0.  2.\n",
+      "  2.  0.  1.  2. nan  2.  2.  2.  0.  3.  1. nan nan  1.  1.  2.  3. nan\n",
+      "  2. nan  2.  2.  1.  2.  2.  0. nan  1. nan  1.  1.  3.  1.  0. nan  2.\n",
+      "  2.  2.  0.  1.  0.  1. nan  3. nan  3.  2.  2. nan nan  2.  1.  3. nan\n",
+      "  1.  0.  2.  1.  3. nan  3.  1.  2. nan  1.  2.  0. nan  2.  0.  3.  3.\n",
+      " nan  1.  3.  1.  2. nan nan  0.  1.  0.  2.  2. nan nan nan  1.  2.  1.\n",
+      " nan  3. nan  2.  1.  3. nan  0.  1. nan  0.  2.  0.  3.  1.  3. nan  2.\n",
+      "  3.  1.  2.  1. nan  1.  1. nan  0.  0.  2. nan  3.  2.  2.  3. nan  0.\n",
+      "  2.  1. nan  1.  3.  0.  2.  1.  2.  3.], shape=(1000,), dtype=float32)\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c542585837a1454390e8604e035bfce8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "ViewInteractiveWidget(height=960, layout=Layout(height='auto', width='100%'), width=960)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -77,18 +153,43 @@
     "# c1 = c1[c1[:,2] > -1.5] #ignore ground plane\n",
     "# ## ------------------------------------------------------------------------------------\n",
     "\n",
-    "c1 = np.random.randn(10,3)\n",
+    "c1 = np.random.randn(1000,3)*tf.constant([3.,3.,1.])\n",
     "\n",
     "it = ICET(cloud1 = c1)\n",
-    "# ViewInteractiveWidget(it.plt.window)\n"
+    "ViewInteractiveWidget(it.plt.window)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 208,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[False False False False  True False  True False False  True]\n",
+      " [False False False False False False False False False False]], shape=(2, 10), dtype=bool)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#test where points are inside spherical cell...\n",
+    "# print(it.cloud1_tensor_spherical)\n",
+    "maxtheta = tf.constant([[0.2],[0.7]])\n",
+    "maxr = tf.constant([[0.5],[2.]])\n",
+    "\n",
+    "ans1 = tf.greater(it.cloud1_tensor_spherical[:,1], maxtheta)\n",
+    "# print(ans1)\n",
+    "ans2 = tf.less(it.cloud1_tensor_spherical[:,0], maxr)\n",
+    "# print(ans2)\n",
+    "combined = tf.Variable([ans1, ans2])\n",
+    "# print(combined)\n",
+    "ans3 = tf.math.reduce_all(combined, axis = 1)\n",
+    "\n",
+    "print(ans3)"
+   ]
   },
   {
    "cell_type": "code",
