fixed bug that was causing spherical voxel grid to miss a column in hte innermost layer of cells

--- a/voxel/OcclusionCulling.ipynb
+++ b/voxel/OcclusionCulling.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -64,7 +64,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d6be9746bde3444fa9b99a664d6db402",
+       "model_id": "13f9a47284194887a55ba25a713c3933",
        "version_major": 2,
        "version_minor": 0
       },
@@ -87,15 +87,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "took 0.04200935363769531 s to identify occupied cells\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c56982895d5f40d6b36540367fe7e245",
+       "model_id": "a236395553264a99beacd4c7c4286fae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -108,10 +115,10 @@
     }
    ],
    "source": [
-    "c = np.array([[10,-10,-1]])\n",
+    "# c = np.array([[10,-10,-1]])\n",
     "# c = np.random.randn(10,3)*np.array([30,30,1]) #test random points\n",
-    "# c = cloud\n",
-    "S2 = scene(cloud = c, fid = 10, cull = True, coord = 1)\n",
+    "c = cloud\n",
+    "S2 = scene(cloud = c, fid = 30, cull = True, coord = 1)\n",
     "S2.plt.show(S2.disp)\n",
     "ViewInteractiveWidget(S2.plt.window)"
    ]
