--- a/v3/ICET_spherical.ipynb
+++ b/v3/ICET_spherical.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
     {
      "data": {
       "application/javascript": [
@@ -50,20 +58,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 78,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "took 0.021701574325561523 s to find occupied cells\n",
+      "occupied =  tf.Tensor(\n",
+      "[613 961 612 969 954 605 964 956 960 970 968 976 971 975 967 977 953 948\n",
+      " 957 947 949 950], shape=(22,), dtype=int32)\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "160df002b0834647a4ad4ba550ab7ce4",
+       "model_id": "fbf7843aea0c4546a4b32321030dee35",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "ViewInteractiveWidget(height=960, layout=Layout(height='auto', width='100%'), width=960)"
+       "ViewInteractiveWidget(height=749, layout=Layout(height='auto', width='100%'), width=960)"
       ]
      },
      "metadata": {},
@@ -73,24 +91,24 @@
    "source": [
     "from ICET_spherical import ICET\n",
     "\n",
-    "## init KITTI dataset -----------------------------------------------------------------\n",
-    "basedir = 'C:/kitti/'\n",
-    "date = '2011_09_26'\n",
-    "drive = '0005'\n",
-    "frame_range = range(150, 151, 1)\n",
-    "dataset = pykitti.raw(basedir, date, drive)\n",
-    "velo1 = dataset.get_velo(0) # Each scan is a Nx4 array of [x,y,z,reflectance]\n",
-    "c1 = velo1[:,:3]\n",
-    "c1 = c1[c1[:,2] > -1.5] #ignore ground plane\n",
-    "## ------------------------------------------------------------------------------------\n",
+    "# ## init KITTI dataset -----------------------------------------------------------------\n",
+    "# basedir = 'C:/kitti/'\n",
+    "# date = '2011_09_26'\n",
+    "# drive = '0005'\n",
+    "# frame_range = range(150, 151, 1)\n",
+    "# dataset = pykitti.raw(basedir, date, drive)\n",
+    "# velo1 = dataset.get_velo(0) # Each scan is a Nx4 array of [x,y,z,reflectance]\n",
+    "# c1 = velo1[:,:3]\n",
+    "# c1 = c1[c1[:,2] > -1.5] #ignore ground plane\n",
+    "# ## ------------------------------------------------------------------------------------\n",
     "\n",
     "# c1 = np.random.randn(100,3)*tf.constant([3.,3.,1.])\n",
     "# c1 = np.random.randn(2,3)*tf.constant([3.,3.,0.5])\n",
     "\n",
     "#single distinct cluster\n",
-    "# c1 = np.random.randn(10,3)*tf.constant([0.1,0.1,0.1]) + tf.constant([2.,3.3,0.])\n",
+    "c1 = np.random.randn(10000,3)*tf.constant([0.3,0.06,0.3]) + tf.constant([0.,4.,0.])\n",
     "\n",
-    "it = ICET(cloud1 = c1, fid = 30)\n",
+    "it = ICET(cloud1 = c1, fid = 50)\n",
     "ViewInteractiveWidget(it.plt.window)\n"
    ]
   },
@@ -136,7 +154,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -150,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
